8191437: AOT doesn't work easily after thread local handshakes

Reviewed-by: kvn, rehn, aph